# thorin

./: CMakeLists.txt
cmake/: thorin-config.cmake.in
src/: CMakeLists.txt
src/thorin/: CMakeLists.txt
src/thorin/be/llvm/: llvm.cpp  vectorize.cpp
src/thorin/util/: symbol.cpp  symbol.h
